# CICD-Team7

./: .gitignore  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-test.yml  clang-tidy.yml  cppcheck.yml  deploy.yml  discord-notify.yml  sonarcloud.yml
src/: main.cpp
test/: test_main.cpp
